<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>io.github.brewlint</groupId>
  <artifactId>brewlint-parent</artifactId>
  <version>0.1.0-SNAPSHOT</version>
  <packaging>pom</packaging>

  <name>Brewlint</name>
  <description>Static analysis for Spring Boot anti-patterns, with optional AI for ambiguous cases.</description>
  <url>https://github.com/JUXCHXX/brewlint</url>

  <licenses>
    <license>
      <name>MIT License</name>
      <url>https://opensource.org/licenses/MIT</url>
    </license>
  </licenses>

  <modules>
    <module>brewlint-core</module>
    <module>brewlint-ai</module>
    <module>brewlint-report</module>
    <module>brewlint-cli</module>
  </modules>
  <!-- NOTE: fixtures/ is intentionally NOT a module.
       It holds deliberately broken Spring code and must never be compiled. -->

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <maven.compiler.release>21</maven.compiler.release>

    <javaparser.version>3.28.2</javaparser.version>
    <picocli.version>4.7.7</picocli.version>
    <snakeyaml.version>2.7</snakeyaml.version>

    <junit.version>5.14.4</junit.version>
    <assertj.version>3.27.7</assertj.version>

    <surefire.version>3.6.0</surefire.version>
    <shade.version>3.6.0</shade.version>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>io.github.brewlint</groupId>
        <artifactId>brewlint-core</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>io.github.brewlint</groupId>
        <artifactId>brewlint-ai</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>io.github.brewlint</groupId>
        <artifactId>brewlint-report</artifactId>
        <version>${project.version}</version>
      </dependency>

      <dependency>
        <groupId>com.github.javaparser</groupId>
        <artifactId>javaparser-core</artifactId>
        <version>${javaparser.version}</version>
      </dependency>
      <dependency>
        <groupId>info.picocli</groupId>
        <artifactId>picocli</artifactId>
        <version>${picocli.version}</version>
      </dependency>
      <dependency>
        <groupId>org.yaml</groupId>
        <artifactId>snakeyaml</artifactId>
        <version>${snakeyaml.version}</version>
      </dependency>

      <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter</artifactId>
        <version>${junit.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.assertj</groupId>
        <artifactId>assertj-core</artifactId>
        <version>${assertj.version}</version>
        <scope>test</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>${surefire.version}</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-shade-plugin</artifactId>
          <version>${shade.version}</version>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>
</project>
